# json-log-viewer

./: Cargo.toml  README.md
src/: app.rs  main.rs  stateful_list.rs
