[package]
name = "json-log-viewer"
description = "Command line JSON log viewer"
version = "0.1.0"
edition = "2021"
authors = ["Benoît Lormeau <blormeau@outlook.com>"]
categories = ["command-line-utilities"]
keywords = ["json", "log", "viewer"]
repository = "https://github.com/benit8/json-log-viewer"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
clap = { version = "4.0.29", features = ["derive"] }
crossterm = "0.25.0"
serde_json = "1.0.89"
tui = "0.19.0"
